#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([lab-docker], [1.0.0])
AC_CONFIG_SRCDIR([src/main.cpp])
# AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AX_CXX_COMPILE_STDCXX_17
AC_CONFIG_FILES([
    Makefile
])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
